[bdist_wheel]
universal=1

[metadata]
name = pyairtable
version = attr: pyairtable.__version__

description = Python Client for the Airtable API
long_description = file: README.md
long_description_content_type = text/markdown
author = Gui Talarico
url = https://github.com/gtalarico/pyairtable
authoremail = gtalarico.dev@gmail.com
license = MIT
copyright = Copyright 2021 Gui Talarico
keywords = airtable, api, client, pyairtable
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

# Keep requests version in sync with tox.ini
[options]
packages = find:
install_requires =
    inflection
    pydantic
    requests >= 2.22.0
    typing_extensions
    urllib3 >= 1.26

[aliases]
test=pytest
